Fixed title bar buttons to not go off screen Infintie scrolling for messages

--- a/app/client/stylesheets/style.less
+++ b/app/client/stylesheets/style.less
@@ -260,20 +260,20 @@ body {
 }
 
 .new-record {
-    position: absolute;
+    position: fixed;
     top:   5px;
     right: 40px;
 }
 
 .new-note-span {
-    position: absolute;
+    position: fixed;
     top:   5px;
     right: 7px;
     z-index: 2000;
 }
 
 .back-button {
-    position: absolute;
+    position: fixed;
     top: 5px;
     left: 5px;
     display: inline-block;
